k8s-service-ingress-example/eks_test/ingress_alb/alb-ingress-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /v1/health
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
    - name: http
      port: 3000
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /v2/health
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
    - name: http
      port: 3000
      targetPort: 8080
